# infrastructure

./: .ansible-lint  .envrc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .yamllint  README  TODO  ansible.cfg  config.sh  config.yml  flake.nix  hosts  kargo.nix  kubectl-config-oidc.sh  pyproject.toml  renovate.json  renovate.json5  requirements.yml
authentik/: .terraform.lock.hcl  alertmanager.tf  apppassword-flow.tf  argo-cd.tf  argo-rollouts.tf  argo-workflows.tf  argocd-cli.tf  argocd.tf  authentik.tf  certificates.tf  consent-flows.tf  custom-authentication-flow.tf  dovecot.tf  events.tf  flow.tf  flows.tf  gatus.tf  gitlab-ldap.tf  gitlab-oidc.tf  gitlab-saml.tf  gitlab.tf  grafana-agent.tf  grafana.tf  groups.tf  headlamp.tf  hedgedoc.tf  integrations.tf  kargo.tf  kube-prometheus-stack.tf  kubernetes.tf  mail.tf  main.tf  moodle-oidc.tf  moodle.tf  nextcloud-ldap.tf  nextcloud-saml.tf  nextcloud.tf  paperless-ngx.tf  passwordless-authentication-flow.tf  petitstream.tf  (+13 more)
discord/: .terraform.lock.hcl  admin.tf  channels.tf  infrastructure.tf  main.tf  output.tf  roles.tf  server.tf  webhooks.tf
gitlab/: .terraform.lock.hcl  groups.tf  iac.tf  kargo.tf  keys.tf  main.tf  petitstream.tf  projects.tf  renovate.tf  services-charts.tf  services-docker.tf  services.tf  theseus.tf  users.tf
group_vars/: all.yml  k3s.yml  proxmox.yml  proxmox_vm.yml  vault.yml
host_vars/: athena.mareo.fr.yml  k3s-1.vm.athena.mareo.fr.yml  k3s-1.vm.ouranos.mareo.fr.yml  ouranos.mareo.fr.yml
playbooks/: common.yml  k3s.yml  main.yml  proxmox.yml
proxmox/: dns.tf  hosts.tf  (+7 more)
(+328 files in other folders)
