[tool.poetry]
name = "infrastructure"
version = "0.1.0"
description = ""
authors = ["Marin Hannache <git@mareo.fr>"]

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^8.0.0"
netaddr = "^0.9.0"
shyaml = "^0.6.2"

[tool.poetry.dev-dependencies]
pre-commit = "^3.0.0"
ansible-lint = { version = "^6.14.4", markers = "platform_system != 'Windows'" }
yamllint = "^1.26.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
