[tool.poetry]
name = "infrastructure"
version = "0.1.0"
description = ""
authors = ["Marin Hannache <git@mareo.fr>"]
package-mode = false

[tool.poetry.dependencies]
python = "3.12.7"
ansible = "11.1.0"
netaddr = "1.3.0"
shyaml = "0.6.2"

[tool.poetry.dev-dependencies]
pre-commit = "4.0.1"
ansible-lint = { version = "24.12.2", markers = "platform_system != 'Windows'" }
yamllint = "1.35.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
